# Dubbing-Pipeline

./: .gitignore  PLAN.md  dub_pipeline.py  main.py  pyproject.toml
dub_pipeline/: __init__.py  audio.py  config.py  orchestrator.py  qwen_fallback.py  segment.py  synthesize.py  transcribe.py  translate.py  translategemma_fallback.py
handoff/: 10-06-2026-localization-infrastructure.md
